Bootstrap the app with config.js

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" href="css/todo.css">
 	</head>
 	<body>
-		<script data-main="src/main" src="bower_components/requirejs/require.js"></script>
+		<script data-main="src/config.js" src="bower_components/requirejs/require.js"></script>
+		
 	</body>
 </html>
